@@ -111,9 +111,6 @@ ext.performanceReportTasks = tasks.withType(PerformanceReport)
 performanceReportTasks.all(withPerformanceDb)
 
 task performanceReport(type: PerformanceReport) {
-    //jvmArgs '-Xverify:none', '-XX:+UnlockCommercialFeatures', '-XX:+FlightRecorder', '-XX:+UnlockDiagnosticVMOptions', '-XX:+DebugNonSafepoints', '-XX:FlightRecorderOptions=stackdepth=1024,disk=true,dumponexit=true,defaultrecording=true'
-    minHeapSize = '1g'
-    maxHeapSize = '2g'
     classpath = sourceSets.performanceTest.runtimeClasspath
     resultStoreClass = "org.gradle.performance.results.AllResultsStore"
     reportDir = new File(buildDir, "performance-tests/report")
@@ -126,7 +123,10 @@ performanceTestTasks.all { PerformanceTest task ->
     withPerformanceDb(task)
     testClassesDir = sourceSets.performanceTest.output.classesDir
     classpath = sourceSets.performanceTest.runtimeClasspath
-    dependsOn( prepareSamples, { project(':toolingApi').publishLocalArchives }, ':distributions:binZip')
+    dependsOn prepareSamples
+    requiresBinZip = true
+    requiresLibsRepo = true
+
     finalizedBy performanceReport
 
     project.task("clean${task.name.capitalize()}", type: Delete) {
@@ -139,23 +139,11 @@ performanceTestTasks.all { PerformanceTest task ->
     }
 
     maxParallelForks = 1
-    checks = 'speed'
-
-    // JVM arguments to get more stable performance on the measurements side to minimize the affect of measuring and executing the build on the performance measurement results
-    jvmArgs '-XX:+AlwaysPreTouch', '-XX:BiasedLockingStartupDelay=0', '-XX:CICompilerCount=2', '-Dsun.io.useCanonCaches=false'
-    environment 'MALLOC_ARENA_MAX', '2' // see https://devcenter.heroku.com/articles/tuning-glibc-memory-behavior#what-value-to-choose-for-malloc_arena_max
-
-    // Retain the tmpdir in running performance tests
-    // In CI, the build has java.io.tmpdir set to TeamCity agent's
-    // temp/buildTmp directory that gets cleaned up after the build
-    // completes.
-    systemProperty 'java.io.tmpdir', System.getProperty('java.io.tmpdir')
 
     doFirst {
         // Some performance builds generate a lot of output,
         // that is buffered until the test finishes via GradleExecuter.
         if (System.getProperty('sun.arch.data.model').contains("64")) {
-            minHeapSize = '4g'
             maxHeapSize = '4g'
         } else {
             println "not increasing JVM heap size due to use of 32bit JVM"
@@ -229,12 +217,6 @@ configure([performanceTest, performanceExperiment, fullPerformanceTest, performa
         systemProperties['org.gradle.performance.use_yourkit'] = '1'
         outputs.upToDateWhen { false }
     }
-    if (project.hasProperty('org.gradle.performance.heapdump')) {
-        systemProperties['org.gradle.performance.heapdump'] = project.property('org.gradle.performance.heapdump')?:'1'
-    }
-    if (project.hasProperty('org.gradle.performance.hotspotlog')) {
-        systemProperties['org.gradle.performance.hotspotlog'] = '1'
-    }
     if (project.hasProperty('org.gradle.performance.honestprofiler')) {
         systemProperties['org.gradle.performance.honestprofiler'] = '1'
     }
@@ -279,17 +261,6 @@ class PerformanceReport extends JavaExec {
 
 tasks.withType(ProjectGeneratorTask) {
     sharedTemplateDirectory = project.findProject(':internalPerformanceTesting').file('src/templates')
-}
-
-tasks.withType(AbstractProjectGeneratorTask) {
-    dependsOn ':internalPerformanceTesting:measurementPluginJar'
-    doFirst {
-        templateArgs.measurementPluginJarFile = project.tasks.findByPath(':internalPerformanceTesting:measurementPluginJar')?.archivePath
-    }
-}
-
-tasks.withType(RemoteProject).all {
-    dependsOn ':internalPerformanceTesting:measurementPluginJar'
 }
 
 // add task that zips the junit xml test report files to a zip file
